# ifconfig-fastly

./: .gitignore  Cargo.toml  README.md  fastly.toml  rust-toolchain
.github/workflows/: build.yaml  deploy.yaml
src/: lib.rs  main.rs
templates/: geo-ip@edge.html
